Installed paypal-rest-sdk and created configure for my authorization in PayPal /services/paypal/configure.js. Created services and Class inside this file. Services has function which get data from endpoint request on path (/create-payment) and imported configure.js . Function created transaction and return some data in JSON format. returned info has links and type payment and id for execution of transaction after client followed on REDIRECT link for payment on PayPal page.

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=5000
 JSON_KEY='lamps-for-all-41ec3-8986d04f6c68.json'
+
+PAYPAL_CLIENT_ID = 'AVn0ULKoBMaRcvml-G9PxmNuWtPj8bDYJvtbyxHDHjyi6XuJFSYZN6B-B7ZKBEW4n2LlyjiFlwx9cBBt'
+PAYPAL_SECRET_ID = 'EHsON8KCADYDTAW2B_2F6Yr8K2TfWmF-EBSFigd8l7nypz0Wk5Hzqap_5nJejQkNKoud9jFY8o8M98rx'
