--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.4.0",
     "firebase-admin": "^11.10.1",
     "nodemailer": "^6.9.5",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "paypal-rest-sdk": "^1.8.1"
   }
 }
